| Summary: | ASTERISK-27997: pjproject_bundled: Fix for Solaris builds. Do not undef s_addr. | ||
| Reporter: | Alexander Traud (traud) | Labels: | patch |
| Date Opened: | 2018-07-30 07:41:44 | Date Closed: | 2018-08-08 05:03:38 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | pjproject/pjsip |
| Versions: | 13.22.0 15.5.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Solaris 11.3 | Attachments: | ( 0) 0120.patch |
| Description: | ASTERISK-20366 got re-introduced with the bundled PJProject. The authors of PJProject undef s_addr because of some issue in Microsoft Windows. However in Oracle Solaris, s_addr is not a structure member, but defined to map to the real structure member.
The attached patch here, changes the only {{struct pj_in_addr}} usage to its alias {{pj_in_addr}} within Asterisk itself. For PJProject, the first patch attached to ASTERISK-20366 is re-used exactly like it was. The second patch there, is still included in Asterisk; not need to re-add it. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-07-30 07:41:45.437-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2018-08-08 05:03:39.633-0500 Change 9781 merged by Joshua Colp: pjproject_bundled: Fix for Solaris builds. Do not undef s_addr. [https://gerrit.asterisk.org/9781|https://gerrit.asterisk.org/9781] By: Friendly Automation (friendly-automation) 2018-08-08 05:11:59.699-0500 Change 9778 merged by Joshua Colp: pjproject_bundled: Fix for Solaris builds. Do not undef s_addr. [https://gerrit.asterisk.org/9778|https://gerrit.asterisk.org/9778] By: Friendly Automation (friendly-automation) 2018-08-08 05:12:21.222-0500 Change 9779 merged by Joshua Colp: pjproject_bundled: Fix for Solaris builds. Do not undef s_addr. [https://gerrit.asterisk.org/9779|https://gerrit.asterisk.org/9779] By: Friendly Automation (friendly-automation) 2018-08-08 05:12:42.793-0500 Change 9780 merged by Joshua Colp: pjproject_bundled: Fix for Solaris builds. Do not undef s_addr. [https://gerrit.asterisk.org/9780|https://gerrit.asterisk.org/9780] | ||